# cb-auto-trade

./: .gitignore  README.md  main.py  pyproject.toml
cbat/: crawl.py  excel_parser.py  logging.py  utils.py
